syntax = "proto3";

package rivet.backend.pkg.cloud.game_config_get;

import "legacy/proto/common.proto";
import "legacy/proto/backend/cloud.proto";

message Request {
	repeated rivet.common.Uuid game_ids = 1;
}

message Response {
	repeated rivet.backend.cloud.Game game_configs = 1;
}
