syntax = "proto3";

package rivet.backend.pkg.cluster.server_get;

import "proto/common.proto";
import "proto/backend/cluster.proto";

message Request {
	repeated rivet.common.Uuid server_ids = 1;
}

message Response {
	repeated rivet.backend.cluster.Server servers = 1;
}
